# ForgeISO

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.ci.yml
.github/workflows/: ci.yml  release.yml
agent/: go.mod
agent/cmd/forgeiso-agent/: main.go
agent/internal/api/: codec.go  server_impl.go  service.go  types.go
agent/internal/auth/: auth.go  auth_test.go
agent/internal/jobs/: manager.go  manager_test.go
agent/internal/vm/: harness.go  harness_test.go
cli/: Cargo.toml
cli/src/: main.rs
containers/: C1.rust.Dockerfile  C2.go.Dockerfile  C2.sbom.Dockerfile  C3.gui.Dockerfile  C4.security.Dockerfile  C5.integration.Dockerfile  C6.e2e.Dockerfile
docs/: design.md  lts-policy.md  runbook-local.md  runbook-release.md  runbook-remote-agent.md  security.md  troubleshooting.md
engine/: Cargo.toml
engine/src/: autoinstall.rs  config.rs  error.rs  events.rs  iso.rs  kickstart.rs  lib.rs  modules.rs  orchestrator.rs  policy.rs  release_tracker.rs  report.rs  runtime.rs  scanner.rs  workspace.rs
engine/src/backends/: arch.rs  fedora.rs  mint.rs  mod.rs  ubuntu.rs
examples/: arch.yaml  fedora.yaml  mint-lts.yaml  scan-policy.yaml  ubuntu-lts.yaml
forge-gui/: Cargo.toml
forge-gui/src/: app.rs  main.rs  state.rs  worker.rs
gui/: index.html  package-lock.json  package.json  tsconfig.json
gui/src/: App.tsx  distro.ts  hooks.ts  store.ts  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
gui/src/components/: DoctorSidebar.tsx  JobProgress.tsx  LogPanel.tsx  Stepper.tsx  forms.tsx
gui/src/stages/: BuildStage.tsx  CompletionStage.tsx  DiffStage.tsx  InjectStage.tsx  VerifyStage.tsx
hooks/: runner.py
packaging/: PKGBUILD  forgeiso.spec
packaging/man/: forgeiso.1
packaging/rpm/: forgeiso.spec
proto/forgeiso/agent/v1/: agent.proto
scripts/: github-lockdown.sh
scripts/ci/: c1-rust.sh  c2-go.sh  c2-sbom.sh  c3-gui.sh  c4-security.sh  c5-integration.sh  c6-e2e.sh
scripts/release/: build-repos.sh  bump-version.sh  clean-release-dir.sh  common.sh  forgeiso-desktop  make-packages.sh  package-deb.sh  package-pacman.sh  package-rpm.sh  package-tarball.sh  package-zstd.sh  verify-release.sh
scripts/test/: make-smoke-iso.sh
tui/: Cargo.toml
tui/src/: main.rs
