[package]
name = "forgeiso-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "forgeiso-tui"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
forgeiso-engine = { path = "../engine" }
serde_json.workspace = true
